Fix sizing spacing and text color breaking on some sites

--- a/drawing.css
+++ b/drawing.css
@@ -17,7 +17,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2rem;
+    font-size: 1vw;
     color: #fff;
     font-family: Helvetica, sans-serif;
 }
@@ -39,19 +39,28 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 35vw;
+    width: 35em;
 }
 
 .sdmcd-help-line {
-    font-size: 1.5vw;
+    font-size: 1.5em;
     height: 1.6em;
     margin: 0;
+    color: #fff;
+}
+
+#sdmcd-color-content {
+    font-size: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.2em;
 }
 
 #sdmcd-color {
-    width: 10em;
-    height: 10em;
-    border-radius: .5em;
+    width: 20em;
+    height: 20em;
+    border-radius: 1em;
     padding: 0;
     border: none;
     outline: none;
